# ML-Finance

./: README.md  YandexCloud.md
5.2 Облачная инфраструктура/: .env.example  README.md  api_client.py  main.py  pyproject.toml  requirements.txt  settings.py
5.3 Взаимодействие с моделью. Построение API. FastAPI/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
5.3 Взаимодействие с моделью. Построение API. FastAPI/app/: fastapi.py  settings.py  trading_strategy.py
5.3 Взаимодействие с моделью. Построение API. FastAPI/app/routes/: trading_routes.py
5.4 Docker. Упаковка модели и API в контейнер. Serverless запуск в облаке/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
5.4 Docker. Упаковка модели и API в контейнер. Serverless запуск в облаке/app/: fastapi.py  models.py  settings.py  trader.py
5.5 Мониторинг состояния модели и текущих результатов/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
5.5 Мониторинг состояния модели и текущих результатов/alertmanager/: README.md  alertmanager.yml
5.5 Мониторинг состояния модели и текущих результатов/app/: fastapi.py  metrics.py  middlewares.py  settings.py  trading_strategy.py
5.5 Мониторинг состояния модели и текущих результатов/grafana/: .dockerignore  Dockerfile  README.md
5.5 Мониторинг состояния модели и текущих результатов/prometheus/: .dockerignore  Dockerfile  README.md  alert_rules.yml  (+1 more)
5.6 Docker compose. Разворачивание микросервисной архитектуры/: .env.example  .gitignore  README.md  docker-compose.yml
5.7 Оркестратор AirFlow. Контроль метрик модели и запуск цикла переобучения/: README.md
6.4 Перенос модели в облачную среду/: Readme.md
6.5 Метрики модели и регулярное переобучение/: Readme.md
(+71 files in other folders)
